# django-request-track

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
request_track/: __init__.py  admin.py  apps.py  middleware.py  models.py  settings.py  tasks.py  utils.py
request_track/migrations/: 0001_initial.py
request_track/templates/request_track/admin/: requestlog_change_list.html  requestlog_maintenance.html
request_track/tests/: __init__.py  test_admin.py  test_integration.py  test_middleware.py  test_model.py  test_tasks.py  test_utils.py
sample/: manage.py  requirements.txt
sample/core/: celery.py  settings.py  urls.py  view.py
